#284: Replace XML parser from org.json with underscore parser

--- a/streampipes-connect/pom.xml
+++ b/streampipes-connect/pom.xml
@@ -96,8 +96,9 @@
             <version>1.8</version>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-xml</artifactId>
+            <groupId>com.github.javadev</groupId>
+            <artifactId>underscore</artifactId>
+            <version>1.47</version>
         </dependency>
     </dependencies>
 </project>
