--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
         <commons-beanutils.version>1.9.2</commons-beanutils.version>
         <consul-client.version>1.3.5</consul-client.version>
+        <httpclient.version>4.5.5</httpclient.version>
         <jackson.version>2.9.9</jackson.version>
         <javax.ws.rs.version>2.1</javax.ws.rs.version>
         <javax-servlet-api.version>4.0.1</javax-servlet-api.version>
@@ -199,6 +200,16 @@
                 <groupId>org.apache.shiro</groupId>
                 <artifactId>shiro-web</artifactId>
                 <version>${shiro.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>fluent-hc</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpmime</artifactId>
+                <version>${httpclient.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.rdf4j</groupId>
