--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
+  ~ you may obtain a copy of the License at
   ~
   ~     http://www.apache.org/licenses/LICENSE-2.0
   ~
@@ -781,14 +781,84 @@
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring.version}</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.rat</groupId>
+                    <artifactId>apache-rat-plugin</artifactId>
+                    <version>0.13</version>
+                    <configuration>
+                        <consoleOutput>true</consoleOutput>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
-<!--            <plugin>-->
-<!--                <groupId>org.apache.rat</groupId>-->
-<!--                <artifactId>apache-rat-plugin</artifactId>-->
-<!--                <version>0.13</version>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>license-check</id>
+                        <inherited>false</inherited>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludeSubProjects>false</excludeSubProjects>
+                    <useMavenDefaultExcludes>true</useMavenDefaultExcludes>
+                    <excludes>
+                        <!-- Git related files -->
+                        <exclude>**/.git/**</exclude>
+                        <exclude>**/.gitignore</exclude>
+
+                        <!-- License Files for other licenses -->
+                        <exclude>**/UNLICENSE</exclude>
+
+                        <!-- Maven related files -->
+                        <exclude>**/target/**</exclude>
+                        <exclude>target/**</exclude>
+
+                        <!-- Eclipse related files -->
+                        <exclude>**/.project</exclude>
+                        <exclude>**/.settings/**</exclude>
+                        <exclude>**/.classpath</exclude>
+                        <exclude>**/.factorypath</exclude>
+
+                        <!-- IntelliJ related files -->
+                        <exclude>**/.idea/**</exclude>
+                        <exclude>**/*.iml</exclude>
+
+                        <!-- JSON doesn't like comments -->
+                        <exclude>**/*.json</exclude>
+                        <exclude>**/*.jsonld</exclude>
+                        <exclude>**/*.txt</exclude>
+
+                        <exclude>**/system</exclude>
+
+                        <!-- Test files -->
+                        <exclude>streampipes-code-generation/src/main/resources/pom</exclude>
+                        <exclude>streampipes-code-generation/src/main/resources/web</exclude>
+                        <exclude>streampipes-code-generation/src/test/resources/*_java</exclude>
+                        <exclude>streampipes-code-generation/src/test/resources/expected_pom_xml</exclude>
+                        <exclude>streampipes-code-generation/src/test/resources/expected_web_xml</exclude>
+
+                        <!-- Language Files -->
+                        <exclude>**/*.en</exclude>
+
+                        <!-- Archetype resources should not have ASF license header -->
+                        <exclude>archetypes/streampipes-archetype-pe-processors-flink/src/main/resources/**</exclude>
+                        <exclude>archetypes/streampipes-archetype-pe-processors-jvm/src/main/resources/**</exclude>
+                        <exclude>archetypes/streampipes-archetype-pe-sinks-flink/src/main/resources/**</exclude>
+                        <exclude>archetypes/streampipes-archetype-pe-sinks-jvm/src/main/resources/**</exclude>
+                        <exclude>archetypes/streampipes-archetype-pe-sources/src/main/resources/**</exclude>
+
+                        <!-- External vocabularies -->
+                        <exclude>streampipes-measurement-units/src/main/resources/onto/**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
