--- a/streampipes-model-client/pom.xml
+++ b/streampipes-model-client/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>org.streampipes</groupId>
 		<artifactId>streampipes-parent</artifactId>
-		<version>0.64.0-SNAPSHOT</version>
+		<version>0.64.0</version>
 	</parent>
 	<artifactId>streampipes-model-client</artifactId>
 	<packaging>jar</packaging>
