--- a/streampipes-container/pom.xml
+++ b/streampipes-container/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>org.streampipes</groupId>
 		<artifactId>streampipes-parent</artifactId>
-		<version>0.64.1-SNAPSHOT</version>
+		<version>0.64.0</version>
 	</parent>
 	<artifactId>streampipes-container</artifactId>
 	<description>Large scale event processing agents with semantic checking for combinability.
