--- a/streampipes-model/pom.xml
+++ b/streampipes-model/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>org.streampipes</groupId>
 		<artifactId>streampipes-parent</artifactId>
-		<version>0.64.0</version>
+		<version>0.64.1-SNAPSHOT</version>
 	</parent>
 	<dependencies>
 		<dependency>
