--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 
     <properties>
-        <streampipes.version>0.63.1-SNAPSHOT</streampipes.version>
+        <streampipes.version>0.64.0</streampipes.version>
         <lightcouch.version>0.1.8</lightcouch.version>
         <javax-validation.version>2.0.1.Final</javax-validation.version>
         <junit.version>4.12</junit.version>
