--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.streampipes</groupId>
     <artifactId>streampipes-connect-adapters</artifactId>
     <packaging>pom</packaging>
-    <version>0.64.0-SNAPSHOT</version>
+    <version>0.64.0</version>
     <modules>
         <module>streampipes-connect-adapter</module>
     </modules>
