--- a/streampipes-container-base/pom.xml
+++ b/streampipes-container-base/pom.xml
@@ -25,16 +25,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>streampipes-container-base</artifactId>
+
     <dependencies>
+        <!-- StreamPipes dependencies -->
+
+        <!-- External dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>5.1.9.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.1.9.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,7 +55,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
-            <version>2.1.8.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
