--- a/streampipes-dataformat/pom.xml
+++ b/streampipes-dataformat/pom.xml
@@ -25,12 +25,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>streampipes-dataformat</artifactId>
+
     <dependencies>
+        <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-model</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 
 </project>
