--- a/streampipes-logging/pom.xml
+++ b/streampipes-logging/pom.xml
@@ -28,20 +28,10 @@
     <artifactId>streampipes-logging</artifactId>
 
     <dependencies>
+        <!-- External dependencies -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
         </dependency>
-<!--    <dependency>
-            <groupId>org.streampipes</groupId>
-            <artifactId>streampipes-container</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.streampipes</groupId>
-            <artifactId>streampipes-model</artifactId>
-        </dependency>
--->
     </dependencies>
 </project>
