--- a/streampipes-measurement-units/pom.xml
+++ b/streampipes-measurement-units/pom.xml
@@ -22,12 +22,18 @@
 		<artifactId>streampipes-parent</artifactId>
 		<version>0.64.1-SNAPSHOT</version>
 	</parent>
+
 	<artifactId>streampipes-measurement-units</artifactId>
+
 	<dependencies>
+		<!-- StreamPipes dependencies -->
 		<dependency>
 			<groupId>org.streampipes</groupId>
 			<artifactId>streampipes-commons</artifactId>
+			<version>0.64.1-SNAPSHOT</version>
 		</dependency>
+
+		<!-- External dependencies -->
 		<dependency>
 			<groupId>org.eclipse.rdf4j</groupId>
 			<artifactId>rdf4j-rio-rdfxml</artifactId>
