--- a/streampipes-messaging-jms/pom.xml
+++ b/streampipes-messaging-jms/pom.xml
@@ -25,15 +25,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>streampipes-messaging-jms</artifactId>
+
     <dependencies>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-client</artifactId>
-            <version>5.9.1</version>
-        </dependency>
+        <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-messaging</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
+        </dependency>
+
+        <!-- External dependencies -->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
         </dependency>
     </dependencies>
 
