--- a/streampipes-messaging-kafka/pom.xml
+++ b/streampipes-messaging-kafka/pom.xml
@@ -16,10 +16,11 @@
   ~
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.streampipes</groupId>
-       <artifactId>streampipes-parent</artifactId>
+        <artifactId>streampipes-parent</artifactId>
         <version>0.64.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -27,14 +28,17 @@
     <artifactId>streampipes-messaging-kafka</artifactId>
 
     <dependencies>
+        <!-- StreamPipes dependencies -->
+        <dependency>
+            <groupId>org.streampipes</groupId>
+            <artifactId>streampipes-messaging</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
+        </dependency>
+
+        <!-- External dependencies -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.streampipes</groupId>
-            <artifactId>streampipes-messaging</artifactId>
-        </dependency>
-
     </dependencies>
 </project>
