--- a/streampipes-model/pom.xml
+++ b/streampipes-model/pom.xml
@@ -25,26 +25,46 @@
 		<version>0.64.1-SNAPSHOT</version>
 	</parent>
 	<dependencies>
+		<!-- StreamPipes dependencies -->
 		<dependency>
 			<groupId>org.streampipes</groupId>
 			<artifactId>streampipes-commons</artifactId>
+			<version>0.64.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.streampipes</groupId>
+			<artifactId>streampipes-logging</artifactId>
+			<version>0.64.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.streampipes</groupId>
 			<artifactId>streampipes-vocabulary</artifactId>
+			<version>0.64.1-SNAPSHOT</version>
 		</dependency>
-        <dependency>
-            <groupId>org.streampipes</groupId>
-            <artifactId>streampipes-logging</artifactId>
-        </dependency>
+
+		<!-- External dependencies -->
 		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.github.drapostolos</groupId>
 			<artifactId>type-parser</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>persistence-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.streampipes</groupId>
+			<artifactId>streampipes-empire-annotations</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.streampipes</groupId>
+			<artifactId>streampipes-empire-core</artifactId>
+		</dependency>
+
+		<!-- Test dependencies -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
