--- a/streampipes-serializers/pom.xml
+++ b/streampipes-serializers/pom.xml
@@ -26,14 +26,19 @@
 
     <artifactId>streampipes-serializers</artifactId>
     <dependencies>
+        <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-model</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-model-client</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- External dependencies -->
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-empire-pinto</artifactId>
