--- a/streampipes-sources/pom.xml
+++ b/streampipes-sources/pom.xml
@@ -22,11 +22,15 @@
 		<artifactId>streampipes-parent</artifactId>
 		<version>0.64.1-SNAPSHOT</version>
 	</parent>
+
 	<artifactId>streampipes-sources</artifactId>
+
 	<dependencies>
+		<!-- StreamPipes dependencies -->
 		<dependency>
 			<groupId>org.streampipes</groupId>
 			<artifactId>streampipes-container</artifactId>
+			<version>0.64.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
