--- a/streampipes-user-management/pom.xml
+++ b/streampipes-user-management/pom.xml
@@ -27,14 +27,19 @@
     <artifactId>streampipes-user-management</artifactId>
 
     <dependencies>
+        <!-- StreamPipes dependencies -->
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-model-client</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-storage-couchdb</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- External dependencies -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
