--- a/streampipes-wrapper-flink/pom.xml
+++ b/streampipes-wrapper-flink/pom.xml
@@ -22,17 +22,19 @@
         <artifactId>streampipes-parent</artifactId>
         <version>0.64.1-SNAPSHOT</version>
     </parent>
+
     <artifactId>streampipes-wrapper-flink</artifactId>
     <name>StreamPipes Wrapper for Apache Flink</name>
-    <properties>
-        <flink.version>1.8.0</flink.version>
-    </properties>
+
     <dependencies>
+        <!-- StreamPipes dependencies -->
         <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-            <version>1.8.3</version>
+            <groupId>org.streampipes</groupId>
+            <artifactId>streampipes-wrapper-distributed</artifactId>
+            <version>0.64.1-SNAPSHOT</version>
         </dependency>
+
+        <!-- External dependencies -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -40,6 +42,15 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka_2.11</artifactId>
+            <version>${flink.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -78,15 +89,6 @@
                     <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.streampipes</groupId>
-            <artifactId>streampipes-wrapper-distributed</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-kafka_2.11</artifactId>
-            <version>${flink.version}</version>
         </dependency>
     </dependencies>
 </project>
