--- a/streampipes-wrapper-standalone/pom.xml
+++ b/streampipes-wrapper-standalone/pom.xml
@@ -22,13 +22,16 @@
 		<artifactId>streampipes-parent</artifactId>
 		<version>0.64.1-SNAPSHOT</version>
 	</parent>
+
 	<artifactId>streampipes-wrapper-standalone</artifactId>
 	<name>StreamPipes Wrapper for Standalone Pipeline Element Implementations</name>
 
 	<dependencies>
+		<!-- StreamPipes dependencies -->
 		<dependency>
 			<groupId>org.streampipes</groupId>
 			<artifactId>streampipes-wrapper</artifactId>
+			<version>0.64.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
